# MLOps-Basics-Modif

./: .gitignore  README.md  pyproject.toml
.dvc/: config
.github/workflows/: build_docker_image.yaml
mlops_basics_modif/: Dockerfile  convert_model_to_onnx.py  data.py  docker-compose.yml  inference.py  inference_onnx.py  model.py  models.dvc  requirements_inference.txt  testS3.py  train.py
