[tool.poetry]
name = "mlops-basics-modif"
version = "0.1.0"
description = ""
authors = ["hitoruna <hitorunajp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^3.1.0"
pytorch-lightning = "^2.4.0"
transformers = "^4.46.3"
scikit-learn = "^1.5.2"
hydra-core = "^1.3.2"
wandb = "^0.18.7"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
hydra-colorlog = "^1.2.0"
dvc = "^3.58.0"
onnx = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
